// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextInput default read only text input 1`] = `
<DocumentFragment>
  <span
    class="pf-v6-c-form-control pf-m-readonly"
  >
    <input
      aria-invalid="false"
      aria-label="default read only text input"
      data-ouia-component-id="OUIA-Generated-TextInputBase-5"
      data-ouia-component-type="PF6/TextInput"
      data-ouia-safe="true"
      readonly=""
      type="text"
      value="read only default"
    />
  </span>
</DocumentFragment>
`;

exports[`TextInput disabled text input 1`] = `
<DocumentFragment>
  <span
    class="pf-v6-c-form-control pf-m-disabled"
  >
    <input
      aria-invalid="false"
      aria-label="disabled text input"
      data-ouia-component-id="OUIA-Generated-TextInputBase-3"
      data-ouia-component-type="PF6/TextInput"
      data-ouia-safe="true"
      disabled=""
      type="text"
      value=""
    />
  </span>
</DocumentFragment>
`;

exports[`TextInput invalid text input 1`] = `
<DocumentFragment>
  <span
    class="pf-v6-c-form-control pf-m-error"
  >
    <input
      aria-invalid="true"
      aria-label="invalid text input"
      data-ouia-component-id="OUIA-Generated-TextInputBase-7"
      data-ouia-component-type="PF6/TextInput"
      data-ouia-safe="true"
      type="text"
      value="test input"
    />
    <span
      class="pf-v6-c-form-control__utilities"
    >
      <span
        class="pf-v6-c-form-control__icon pf-m-status"
      >
        <svg
          aria-hidden="true"
          class="pf-v6-svg"
          fill="currentColor"
          height="1em"
          role="img"
          viewBox="0 0 512 512"
          width="1em"
        >
          <path
            d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zm-248 50c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
          />
        </svg>
      </span>
    </span>
  </span>
</DocumentFragment>
`;

exports[`TextInput plain read only text input 1`] = `
<DocumentFragment>
  <span
    class="pf-v6-c-form-control pf-m-readonly pf-m-plain"
  >
    <input
      aria-invalid="false"
      aria-label="plain read only text input"
      data-ouia-component-id="OUIA-Generated-TextInputBase-6"
      data-ouia-component-type="PF6/TextInput"
      data-ouia-safe="true"
      readonly=""
      type="text"
      value="read only plain"
    />
  </span>
</DocumentFragment>
`;

exports[`TextInput read only text input using isReadOnly 1`] = `
<DocumentFragment>
  <span
    class="pf-v6-c-form-control pf-m-readonly"
  >
    <input
      aria-invalid="false"
      aria-label="read only text input"
      data-ouia-component-id="OUIA-Generated-TextInputBase-4"
      data-ouia-component-type="PF6/TextInput"
      data-ouia-safe="true"
      readonly=""
      type="text"
      value="read only"
    />
  </span>
</DocumentFragment>
`;

exports[`TextInput simple text input 1`] = `
<DocumentFragment>
  <span
    class="pf-v6-c-form-control"
  >
    <input
      aria-invalid="false"
      aria-label="simple text input"
      data-ouia-component-id="OUIA-Generated-TextInputBase-2"
      data-ouia-component-type="PF6/TextInput"
      data-ouia-safe="true"
      type="text"
      value="test input"
    />
  </span>
</DocumentFragment>
`;

exports[`TextInput validated text input error 1`] = `
<DocumentFragment>
  <span
    class="pf-v6-c-form-control pf-m-error"
  >
    <input
      aria-invalid="true"
      aria-label="validated text input"
      data-ouia-component-id="OUIA-Generated-TextInputBase-10"
      data-ouia-component-type="PF6/TextInput"
      data-ouia-safe="true"
      type="text"
      value="test input"
    />
    <span
      class="pf-v6-c-form-control__utilities"
    >
      <span
        class="pf-v6-c-form-control__icon pf-m-status"
      >
        <svg
          aria-hidden="true"
          class="pf-v6-svg"
          fill="currentColor"
          height="1em"
          role="img"
          viewBox="0 0 512 512"
          width="1em"
        >
          <path
            d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zm-248 50c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
          />
        </svg>
      </span>
    </span>
  </span>
</DocumentFragment>
`;
